fixed emerge categories gap

--- a/src/templates/items-list/items-style/emerge/style.scss
+++ b/src/templates/items-list/items-style/emerge/style.scss
@@ -81,7 +81,7 @@
             display: flex;
             padding: 0;
             margin: 0;
-            margin-right: var(--vp-items-style-emerge--meta-categories__gap);
+            margin-left: var(--vp-items-style-emerge--meta-categories__gap);
 
             &::after {
                 content: var(--vp-items-style-emerge--meta-categories__separator);
